--- a/vtx_biz/src/main/resources/configs/dev/application-zookeeper.yml
+++ b/vtx_biz/src/main/resources/configs/dev/application-zookeeper.yml
@@ -1,6 +1,7 @@
 zookeeper: # zookeeper配置
-   zookeeper-hosts: 172.20.0.2:2181,172.20.0.3:2181,172.20.0.4:2181 # 节点地址(docker)
+   zookeeper-hosts: 172.20.0.20:2181,172.20.0.21:2181,172.20.0.22:2181 # 节点地址(docker)
+#   zookeeper-hosts: 127.0.0.1:2182,127.0.0.1:2183,127.0.0.1:2184 # 节点地址(docker)   
    retry: 
       initial-sleep-time: 100  # 初始化休眠时间
       max-times: 2 # 重试次数
-   has-open: false # 是否开启集群
+   has-open: true # 是否开启集群
