--- a/vtx_biz/src/main/resources/configs/dev/application-database.yml
+++ b/vtx_biz/src/main/resources/configs/dev/application-database.yml
@@ -6,12 +6,14 @@ databases:
          name: vtx_biz_write # 数据源名称
          driver-class-name: com.mysql.cj.jdbc.Driver
          uri: jdbc:mysql://127.0.0.1:3506/vtx_biz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+#         uri: jdbc:mysql://172.20.0.6:3306/vtx_biz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
          username: <username>
          password: <password>
       -
          name: vtx_biz_read # 数据源名称
          driver-class-name: com.mysql.cj.jdbc.Driver # jdbc驱动类型
-         uri: jdbc:mysql://127.0.0.1:3806/vtx_biz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8 # 数据库连接字符串
+         uri: jdbc:mysql://127.0.0.1:3806/vtx_biz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
+#         uri: jdbc:mysql://172.20.0.7:3306/vtx_biz?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
          username: <username>
          password: <password>
 #       -
